--- a/styles/global.css
+++ b/styles/global.css
@@ -5,6 +5,28 @@ main {
     min-height: 20vh;
 }
 
+.btn {
+    font-size: 14px;
+    color: rgb(49, 49, 49);
+    line-height: 1.4;
+    text-align: center;
+    border: none;
+    border-radius: 5px;
+    background-image: -moz-linear-gradient( 106deg, rgb(239,216,85) 0%, rgb(255,251,182) 100%);
+    background-image: -webkit-linear-gradient( 106deg, rgb(239,216,85) 0%, rgb(255,251,182) 100%);
+    background-image: -ms-linear-gradient( 106deg, rgb(239,216,85) 0%, rgb(255,251,182) 100%);
+    box-shadow: 0px 7px 13px 0px rgba(0, 0, 0, 0.1);
+    padding: 10px 20px;
+    transition: 0.3s;
+}
+.btn:hover,
+.btn:focus,
+.btn:active {
+    transition: 0.3s;
+    box-shadow: none;
+    text-decoration: none;
+}
+
 /* footer */
 footer {
     background: rgb(41, 41, 41);
